@@ -63,6 +63,7 @@ start(normal, _Args) ->
     %eprof:start(),
     %eprof:profile([self()]),
     %fprof:trace(start, "/tmp/fprof"),
+    maybe_add_nameservers(),
     start_modules(),
     ejabberd_listener:start_listeners(),
     ?INFO_MSG("ejabberd ~s is started in the node ~p", [?VERSION, node()]),
@@ -180,3 +181,16 @@ get_log_path() ->
 		    Path
 	    end
     end.
+
+
+%% If ejabberd is running on some Windows machine, get nameservers and add to Erlang
+maybe_add_nameservers() ->
+    case os:type() of
+	{win32, _} -> add_windows_nameservers();
+	_ -> ok
+    end.
+
+add_windows_nameservers() ->
+    IPTs = win32_dns_test:get_nameservers(),
+    ?INFO_MSG("Adding machine's DNS IPs to Erlang system:~n~p", [IPTs]),
+    lists:foreach(fun(IPT) -> inet_db:add_ns(IPT) end, IPTs).
